<?xml version="1.0"?>
<package format="2">
  <name>mobile_manipulator_description</name>
  <version>0.0.0</version>
  <description>Combined description for tracer2 base and L5 arm</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
